Refactored posts to have pagination details